changed buttons to lists

--- a/google.html
+++ b/google.html
@@ -9,12 +9,12 @@
   <body>
     <div>
       <div id="header">
-        <div class = "navbar">
+        <ul class = "navbar">
 
-          <button class ="Gmail"> <a href="#"> Gmail </a></button>
-          <button class= "Images"><a href="#">Images </a></button>
-          <button class ="Sign-in"> <a href="#">Sign In <a></button>
-        </div>
+          <li class="nav"> <a href="#"> Gmail </a></li>
+          <li class= "nav"><a href="#">Images </a></li>
+          <li class ="nav2"> <a href="#">Sign In <a></li>
+        </ul>
       </div>
 
       <div id="body">
@@ -25,7 +25,7 @@
         <div class="search">
 
           <form class= "searchbar" form-action="input" method="get">
-            <input type="text" name="search" placeholder="search">
+            <input type="text" name="search" placeholder="">
 
               <button class = "google-search"> Google Search </button>
               <button class = "lucky"> I'm Feeling Lucky </button>
@@ -33,18 +33,20 @@
       </div>
 
       <div id="footer">
-        <div class = "left">
+        <ul class = "left">
 
-          <button class="advertising"><a href="#"> Advertising</a></button>
-          <button class="business"><a href="#">Business </a></button>
-          <button class="about"><a href="#">About</a></button>
-        </div>
+          <li class="foot"><a href="#"> Advertising</a></li>
+          <li class="foot"><a href="#">Business </a></li>
+          <li class="foot"><a href="#">About</a></li>
+        </ul>
 
-        <div class="right">
-          <button class="privacy"><a href="#">Privacy</a></button>
-          <button class ="terms"><a href="#">Terms</a></button>
-          <button class="settings"><a href="#"> Settings</a></button>
-        </div>
+        <ul class="right">
+          <li class="foot2"><a href="#"> Privacy </a></li>
+          <li class ="foot2"><a href="#"> Terms </a></li>
+          <li class="foot2"><a href="#"> Settings </a></li>
+        </ul>
+      </div>
+    </div>
 
   </body>
 </html>
