--- a/index.html
+++ b/index.html
@@ -1,10 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Google</title>
+    <link rel="stylesheet" href="main.css" media="screen" title="no title" charset="utf-8">
+
   </head>
   <body>
+    <div class="wrapper">
+    		<div class="navigation">
+    			<ul>
+    				<li <span class="name">+Taylor</span></li>
+    				<li class="gmail"><a href="https://mail.google.com/mail/?tab=wm&authuser=0">Mail</a></li>
+    				<li class="images"><a href="https://www.google.com/imghp?hl=en&tab=wi&authuser=0&ei=LhsgV6nCBMG3jgTXqrXIBQ&ved=0EKouCBYoAQ">Images</a></li>
+    				<li class="icons"><a href="#"><img src="all-icons.png" alt="icons"></a></li>
+    			</ul>
+</div>
+		<div class="main">
+			<div class="logo"><img src="google-logo.png" alt="Google Logo"></div>
+			<div class="searchfield">
+				<input type="text">
+			</div>
+			<div class="buttons_search">
+				<a href="#"><div class="google_search button_search">Google Search</div></a>
+				<a href="#"><div class="feeling_lucky button_search">I'm Feeling Lucky</div></a>
+			</div>
+		</div>
+		<div class="footer">
+			<div class="footer_left">
+				<ul>
+					<li><a href="https://www.google.com/intl/en/ads/?fg=1">Advertising</a></li>
+					<li><a href="https://www.google.com/services/?fg=1">Business</a></li>
+					<li><a href="https://www.google.com/intl/en/about.html?fg=1">About</a></li>
+				</ul>
+			</div>
+			<div class="footer_right">
+				<ul>
+					<li><a href="https://www.google.com/intl/en/policies/privacy/?fg=1">Privacy</a></li>
+					<li><a href="https://www.google.com/intl/en/policies/terms/?fg=1">Terms</a></li>
+					<li><a href="https://www.google.com/preferences?hl=en">Settings</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</body>
+</html>
 
-  </body>
 </html>
